--- a/java-basico-master/index.html
+++ b/java-basico-master/index.html
@@ -1,13 +1,23 @@
-<DOCTYPE html>
-    <html lang="es">
-        <head>
-            <meta charset="utf-8">
-            <title>Practica con javascript</title>
-            </head>
-            <body>
-                <h1>Mi primer JavaScript</h1>
-                <button onclick="mostrarMensaje()"> mostrarMensaje</button>
-                <script src="script.js"></script>
-            </body>
-    </html>
-    
+<!DOCTYPE html>
+<html lang="es">
+    <head>
+        <meta charset="utf-8">
+        <title>Practica con javaScript</title>
+    </head>
+    <body>
+        <h1>Mi primer JavaScript</h1>
+        <button onclick="mostrarMensaje()">Mostrar mensaje</button>
+        <button onclick="imprimirVariables()">Variables</button>
+        <button onclick="arreglos()">Arreglos</button>
+        <button id="btnSaludar">Saludar</button>
+        <ul id="lista"></ul>
+        <button id="btnAgregar">Agregar item</button>
+        <hr>
+        <h2>Lista de palabras</h2>
+        <label for="txtEntrada">Ingresa una palabra:</label>
+        <input id="txtEntrada" type="text" placeholder="JavaScript">
+        <button id="btnAddPalabra">Agregar palabra</button>
+        <ul id="lstPalabras"></ul>
+        <script src="script.js"></script>
+    </body>
+</html>
